updated scripts to use root, more OS cleanup work

--- a/http/ubuntu-16.04/preseed.cfg
+++ b/http/ubuntu-16.04/preseed.cfg
@@ -1,46 +1,36 @@
+choose-mirror-bin mirror/http/proxy string
 d-i debian-installer/locale string en_US
-d-i time/zone string UTC
-
-d-i keyboard-configuration/xkb-keymap select us
-
-d-i partman-auto/method string regular
-d-i partman-auto/expert_recipe string \
-        scheme ::                     \
-        200 0 200 ext4                \
-                $primary{ }           \
-                $bootable{ }          \
-                method{ format }      \
-                format{ }             \
-                use_filesystem{ }     \
-                filesystem{ ext4 }    \
-                mountpoint{ /boot } . \
-        200% 0 200% linux-swap        \
-                $primary{ }           \
-                method{ swap }        \
-                format{ } .           \
-        1 0 -1 ext4                   \
-                $primary{ }           \
-                method{ format }      \
-                format{ }             \
-                use_filesystem{ }     \
-                filesystem{ ext4 }    \
-                mountpoint{ / } .
-d-i partman-partitioning/confirm_write_new_label boolean true
+d-i base-installer/kernel/override-image string linux-server
+d-i time/zone string US/Mountain
+d-i clock-setup/utc boolean true
+d-i clock-setup/utc-auto boolean true
+d-i finish-install/reboot_in_progress note
+d-i grub-installer/only_debian boolean true
+d-i grub-installer/with_other_os boolean true
+d-i partman-auto-lvm/guided_size string max
+d-i partman-auto/choose_recipe select atomic
+d-i partman-auto/method string lvm
+d-i partman-lvm/confirm boolean true
+d-i partman-lvm/confirm boolean true
+d-i partman-lvm/confirm_nooverwrite boolean true
+d-i partman-lvm/device_remove_lvm boolean true
 d-i partman/choose_partition select finish
 d-i partman/confirm boolean true
 d-i partman/confirm_nooverwrite boolean true
-
-d-i base-installer/excludes string laptop-detect
-
-d-i passwd/root-password-again password vagrant
+d-i partman/confirm_write_new_label boolean true
+d-i passwd/root-login boolean true
 d-i passwd/root-password password vagrant
-d-i passwd/user-fullname string vagrant
-d-i passwd/username string vagrant
-d-i passwd/user-password password vagrant
-d-i passwd/user-password-again password vagrant
+d-i passwd/root-password-again password vagrant
+d-i passwd/make-user boolean false
 d-i user-setup/allow-password-weak boolean true
-
-d-i pkgsel/include string curl openssh-server sudo
-d-i pkgsel/language-packs multiselect
-
-d-i finish-install/reboot_in_progress note
+d-i pkgsel/include string curl openssh-server
+d-i pkgsel/install-language-support boolean false
+d-i pkgsel/update-policy select none
+#d-i pkgsel/upgrade select full-upgrade
+tasksel tasksel/first multiselect standard, ubuntu-server
+d-i preseed/late_command string \
+in-target sed -i 's/\(GRUB_CMDLINE_LINUX_DEFAULT=\).*/\1\"\"/g' /etc/default/grub; \
+in-target bash -c 'update-grub2'; \
+in-target sed -i 's/PermitRootLogin.*/PermitRootLogin yes/g' /etc/ssh/sshd_config ; \
+in-target ln -sf /dev/null /etc/systemd/network/99-default.link; \
+in-target update-initramfs -u
