--- a/http/ubuntu-16.04/preseed.cfg
+++ b/http/ubuntu-16.04/preseed.cfg
@@ -8,7 +8,7 @@ d-i finish-install/reboot_in_progress note
 d-i grub-installer/only_debian boolean true
 d-i grub-installer/with_other_os boolean true
 d-i partman-auto-lvm/guided_size string max
-d-i partman-auto/choose_recipe select multi
+d-i partman-auto/choose_recipe select atomic
 d-i partman-auto/method string lvm
 d-i partman-lvm/confirm boolean true
 d-i partman-lvm/confirm boolean true
